# AIStandardPlatform

./: .gitignore  README.md  STREAMLIT_UI_README.md  \  \.pub  add_users.py  app.py  index.html  login.html  main.py  mcp-gradio-ui.py  password.html  pyproject.toml  register.html  requirements.txt  run_ui.py  server.py  streamlit_ui_backup.py  streamlit_ui_fixed.py  update_db.py  users.db
static/: forgot.html  index.html  login.html  register.html  style.css
