[project]
name = "rfp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.57.1",
    "arxiv>=2.2.0",
    "asyncio>=3.4.3",
    "gradio>=5.38.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "mcp[cli]>=1.12.0",
    "nest-asyncio>=1.6.0",
    "openai>=1.97.1",
    "pinecone>=7.3.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.28.0",
    "sync>=1.0.0",
    "tavily-python>=0.7.10",
    "transformers>=4.53.3",
]

